@@ -1,4 +1,5 @@
 3.2
+ * Make compression ratio much more accurate (CASSANDRA-10225)
  * Optimize building of Clustering object when only one is created (CASSANDRA-10409)
  * Make index building pluggable (CASSANDRA-10681)
  * Add sstable flush observer (CASSANDRA-10678)
